# lurk-chan

./: .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  changelog.md  docker_entrypoint.sh  egg-lurk-chan.json  readme.md  todo.md
.github/workflows/: docker-publish.yml
.sqlx/: query-028c28d1d2992708f65ba49167e4d016bdbb85d62ad06b94b35b0f5dd65b3083.json  query-03989f7e79360288edfb1d49acfe041325bb2a7ae2daac9c658f0f00125eab02.json  query-0bf460a0958de092588378e92418a90bc456d399a2f30283877d78b070b021e7.json  query-15821425716c925e2340df7236697b60f43c9b36a8fc728de8bf6234b69d816b.json  query-165af8650d1ebc681cdfd32fa561756903ecb12355a5e88438bb64ffcddf4d8e.json  query-1a9bf4003aefa4a1110373454e978b093ff461b17510cea6407badd0768e7ed8.json  query-1de6de7da4acb285f1bba20bae1477d86339372bc336c0d0ae6d4ace4e3090f7.json  query-1e959845074d66d1c4fe146896bc01d7f16e3f906944de5233ef7a691d17f616.json  query-1fae9c627c0b4469ee16d19e11956eeb7fef64f8166f14b4dcc8027c5598423e.json  query-22957a9daf8e7a9924462b4e7d0396ee961096b2599315caa1b076fef7ee28e3.json  query-28101f3312b4d9060676c1e4cbf571fd0de7df84ece1c7e29b7772f5de605330.json  query-2994d2efcabfbb2e13e822cb67d9052da089cf66f2f91c584a197a0d851e79b4.json  query-29f641205a205732eb0a1031eba9d5a08e993beff5d44731e9c3b68bfb8b4852.json  query-2fb3163fa4825f214ccc52cd58dc447f0798a1614b79af243564056db2c7b0c1.json  query-3dab2d865442b3ff669ee31be7ebe60d002e60b5fe609d0277571c331e5a3865.json  query-3e31854b52459ea14a2d7d7121ad571feebece077cc157eb320039a2f0148585.json  query-4027cee54b36bd725a63d46d47ff11156662f4e41520203cd53cc8cd8aaa2c69.json  query-45bbeda294b00ff5ac189e75c136aaeb2724b0e357647c562001d9491358f613.json  query-45bc4cf12c97223fd35960b8d2a8bde448ca2db5f65a96d08dc3c5aadd66d188.json  query-4ad23b7f7e603c9a0cf40143c1aaa7a356254ae145e4327c4bcfdb475d60c5bf.json  query-4ea3292799cb8bb9e9f88f90f0b4ec81b27d43e152b38aa97c6f298ba1745cab.json  query-50a4ab389a1893418159b90b10335549998145ad61d61d89bc4a07199ee5b721.json  query-50e092e4af70c6d382b78550e7d86ec420cb263c6961215cf5167cbc37d262e0.json  query-5703922d81e137ae18f060aebc15210f118dc0ab28d445b2375cf789987525ab.json  query-62bb1d6d86caf8523f679b13a42c1e7e1e0dcf60ab54cd48ed1d2fdcce535216.json  query-6333063765a0f53f093326fd54e9f1260a21702cc2865cb7d157755fe6086a80.json  query-75476b7648caf320407023132da8e55a2e2c529803e92e76d77166bd8265a19c.json  query-75d969201666ceebff397862f6a8b8d2eec57903f8ffbfbe0095a39cb3576f19.json  query-77ffde8069ce9b93a9e5711939e4d3f427d5b5969bb565ff0b0b5129d54a2373.json  query-7f274dbfcd6c1f9dde63f320f65efd07cefc90822ea7a945b6b9d11f39bf2d1b.json  query-81cfdc5231d5d1c6340ef5895a1ee2617ed5f3938f9f5cb8626ac76101320db7.json  query-89fa432fd30a5636436ed7ecb86472111c5e606ea4552ba8a367546ecaa575ce.json  query-8a7233d0727bd45984b658965e97ef035c0e578ad1811ddf560831441103969a.json  query-8ca3f589152238a37bbe2a9d1bb5df1d88868a936694ffd374290aef878befab.json  query-91e68af62c6347ae0c60cc18466b54e960074aec08b91f1712aec401ad59d731.json  query-927b3dd27c65e1d374877aad73c2b10df3b0031f2191a4573ec4cf160325a4a5.json  query-9b44f1b96f594bb0a05c33a51f1bd6c7156ed7551072313e58e34999ffc4aa38.json  query-9e3a3e2e605332a0903a76ae478367db0dec2a0d0e78eba7b53955c12661a816.json  query-9fa2a30d832eea3061114769ed4dfc452a770eb0f01b40c4f9bd8ef4643f5b74.json  query-aa327cddf7affbf75f6664c4b96ba4ab26bb13e8127679e8c48573278626e0bd.json  (+38 more)
common/: Cargo.toml
common/src/: lib.rs
database/: Cargo.toml
database/migrations/: 20231019031054_init.down.sql  20231019031054_init.up.sql  20231021172809_add_message_tracker.down.sql  20231021172809_add_message_tracker.up.sql  20231021190205_add_edit_tracking.down.sql  20231021190205_add_edit_tracking.up.sql  20231109043559_index.down.sql  20231109043559_index.up.sql  20231109043729_fts.down.sql  20231109043729_fts.up.sql  20231118052035_fts_remove.down.sql  20231118052035_fts_remove.up.sql  20231123031938_twopointow.down.sql  20231123031938_twopointow.up.sql
database/src/: lib.rs
lurk_chan/: Cargo.toml  default_config.toml
lurk_chan/src/: event.rs  lib.rs  main.rs  modal_bullshit.rs  tasks.rs
lurk_chan/src/commands/: audit.rs  mod.rs  move_thing.rs  past.rs  ping.rs  report.rs  report_to_admin.rs
lurk_chan/src/tasks/: console.rs  mod.rs  stats.rs
src/: audit.rs  autorespond.rs  console.rs  db.rs  expire.rs  guild_audit.rs  interactions.rs  lc.rs  main.rs  prefabs.rs  report.rs  stats.rs
src/commands/: audit.rs  audit_discord.rs  import.rs  judgement.rs  mod.rs  past.rs  ping.rs  query.rs  report.rs  report_message_to_admins.rs  search.rs
src/data/: changelog.md  messages.txt
src/data/query/: search_actions.sql  search_reports.sql
