[package]
name = "lurk_chan"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-shutdown = "0.2.1"
clap = { version = "4.4.6", features = ["derive"] }
color-backtrace = "0.6.0"
dotenvy = "0.15.7"
futures = { version = "0.3.28", default-features = false }
json-patch = "1.2.0"
once_cell = "1.18.0"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serenity = { git = "https://github.com/serenity-rs/serenity.git", rev = "136330ada75c6988cfd6813dccc3fb78542cd389", default-features = false, features = ["rustls_backend", "builder", "collector", "chrono", "cache", "client", "gateway", "http", "model", "utils"] }
shellwords = "1.1.0"
#serenity = { version = "0.11.6", default-features = false, features = ["rustls_backend", "parking_lot", "model", "levenshtein", "http", "gateway", "framework", "flate2", "default_no_backend", "dashmap", "command_attr", "client", "chrono", "cache", "builder", "base64", "bytes", "utils"] }
sqlx = { version = "0.7.2", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
url = { version = "2.4.1", features = ["serde"] }


[profile.dev.package."*"]
opt-level = 2