[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
thiserror = "1.0.50"
tracing = "0.1.40"
serde_json = "1.0.108"
json-patch = "1.2.0"
