[package]
name = "database"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
thiserror = "2.0.3"
tracing = "0.1.40"
serde_json = "1.0.108"
json-patch = "3.0.1"
tokio = { version = "1.34.0", features = ["macros"] }
