[package]
name = "lurk_chan"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-shutdown = "0.2.1"
chrono = { version = "0.4.31", default-features = false, features = ["alloc", "std", "clock"] }
clap = { version = "4.4.8", features = ["derive"] }
common = { path = "../common" }
database = { path = "../database" }
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next", version = "0.5.5" }
serde = "1.0.193"
serde_json = "1.0.108"
shellwords = "1.1.0"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing-log"] }
