[package]
name = "lurk_chan"
version = "2.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-shutdown = "0.2.1"
chrono = { version = "0.4.31", default-features = false, features = ["alloc", "std", "clock"] }
clap = { version = "4.4.8", features = ["derive"] }
color-backtrace = "0.6.1"
common = { path = "../common" }
database = { path = "../database" }
ordinal = "0.3.2"
poise = { git = "https://github.com/serenity-rs/poise", rev = "bd969b96810db67f03c8b2c9f0d705106046772c" }
serde = "1.0.193"
serde_json = "1.0.108"
serenity = { version = "0.12.0", default-features = false, features = ["model"] }
shellwords = "1.1.0"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing-log"] }
